<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZnufeNews</string>
    <string name="action_settings">Settings</string>
    <string name="isLoading">正在加载中...</string>
    <string name="newsDetails">新闻详情</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="advice">建议</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="today">今天</string>
    <string name="pm">PM2.5</string>
    <string name="default_text">_ _</string>
    <string name="forecast">预报</string>
    <string name="information">详细信息</string>
    <string name="felt_air_temp">体感温度</string>
    <string name="humidity">湿度</string>
    <string name="wind">风向风力</string>
    <string name="uv_index">紫外线指数</string>
    <string name="dressing_index">穿衣指数</string>
    <string name="title_city">城市选择</string>
    <string name="weather">天气预报</string>
    <string name="send_to">分享</string>

</resources>
